# OpenDTAM

./: .gitignore  LICENSE  Progress Log.txt  README.md
Cpp/: CMakeLists.txt  Cost.h  OpenDTAM.cpp  OpenDTAM.hpp  OpenDTAMhelpers.hpp  Planning.txt  convertAhandaPovRayToStandard.cpp  convertAhandaPovRayToStandard.h  convertPovRayToCamMatrix.cpp  convertPovRayToCamMatrix.cpp~  fileLoader.cpp  fileLoader.hpp  graphics.cpp  graphics.hpp  quiet.hpp  reproject.cpp~  set_affinity.h  swap_to_2.4.9  testprog.cpp  tictoc.h  updateCost.cpp
Cpp/CostVolume/: CMakeLists.txt  Cost.cpp  Cost.h  CostVolume.cpp  CostVolume.cu  CostVolume.cuh  CostVolume.hpp  CostVolume_v0.cu  divgrad.part.cpp  min.part.cpp  min.part.hpp  optimizer.part.cpp  reproject.cpp  reproject.hpp  reproject.part.cpp  updateCost.part.cpp  updateCost.part.hpp
Cpp/CostVolume/utils/: CMakeLists.txt  reproject.cpp  reproject.hpp  reprojectCloud.cpp  reprojectCloud.hpp  utils.h
Cpp/DepthmapDenoiseWeightedHuber/: CMakeLists.txt  DepthmapDenoiseWeightedHuber.cpp  DepthmapDenoiseWeightedHuber.cu  DepthmapDenoiseWeightedHuber.cuh  DepthmapDenoiseWeightedHuber.hpp  DepthmapDenoiseWeightedHuberQD.cpp
Cpp/Map/: Map_iteratorCore.part.cpp  Mapper.cpp  Mapper.h
Cpp/Optimizer/: CMakeLists.txt  Optimizer.cpp  Optimizer.cu  Optimizer.cuh  Optimizer.h  Optimizer.hpp  Optimizer_optimizeQD.cpp
Cpp/Scheduler/: CMakeLists.txt  Frame.hpp  ImplMutex.cpp  ImplMutex.hpp  SynchronizedBuffer.hpp  trk.cpp  ucv.cpp  utrk.cpp
Cpp/Track/: Align_part.cpp  Alignment.cpp  CMakeLists.txt  Track.cpp  Track.hpp  Track_align.h  Tracker2D.cpp  Tracker2D.h  Tracker3D.cpp  Tracker3D.h  align.part.cpp  reprojectCloud
Cpp/docs/: DTAM Process Model.xcf
Cpp/gpu/: ArrayTexture.cpp  ArrayTexture.hpp
Cpp/utils/: CMakeLists.txt  ImplThreadLaunch.cpp  ImplThreadLaunch.hpp  Parameters.cpp  Parameters.hpp  tinyMat.hpp  utils.h  utils.hpp
Pseudocode/: Map.h  Map_iteratorCore.part.cpp  Projection.cpp  Projection.cpp~  Track.h  Track_core_v2.part.cpp  Track_core_v2.part.cpp~  Tracker.h  wrapper
Trajectory_30_seconds/: scene_000.txt  scene_001.txt  scene_002.txt  scene_003.txt  scene_004.txt  scene_005.txt  scene_006.txt  scene_007.txt  scene_008.txt  scene_009.txt  scene_010.txt  scene_011.txt  scene_012.txt  scene_013.txt  scene_014.txt  scene_015.txt  scene_016.txt  scene_017.txt  scene_018.txt  scene_019.txt  scene_020.txt  scene_021.txt  scene_022.txt  scene_023.txt  scene_024.txt  scene_025.txt  scene_026.txt  scene_027.txt  scene_028.txt  scene_029.txt  scene_030.txt  scene_031.txt  scene_032.txt  scene_033.txt  scene_034.txt  scene_035.txt  scene_036.txt  scene_037.txt  scene_038.txt  scene_039.txt  (+560 more)
